--- a/app/src/main/res/layout/dialog_booking_confirmation.xml
+++ b/app/src/main/res/layout/dialog_booking_confirmation.xml
@@ -25,6 +25,12 @@
         android:text="Phòng chiếu:" />
 
     <TextView
+        android:id="@+id/tvMovieDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ngày chiếu:" />
+
+    <TextView
         android:id="@+id/tvShowtime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
