--- a/app/src/main/res/layout/item_booking.xml
+++ b/app/src/main/res/layout/item_booking.xml
@@ -40,6 +40,12 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:id="@+id/tvMovieDate"
+            android:text="Ngày chiếu: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
             android:id="@+id/tvShowtime"
             android:text="Giờ chiếu: "
             android:layout_width="wrap_content"
