--- a/app/src/main/res/layout/item_movie_home.xml
+++ b/app/src/main/res/layout/item_movie_home.xml
@@ -9,8 +9,7 @@
         android:id="@+id/imgMovie"
         android:layout_width="100dp"
         android:layout_height="140dp"
-        android:scaleType="centerCrop"
-        android:background="@drawable/langman"/>
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/tvMovieName"
