--- a/app/src/main/res/menu/menu_admin_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_admin_bottom_nav.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/nav_category" android:title="Thể loại" android:icon="@drawable/langman" />
-    <item android:id="@+id/nav_food" android:title="Đồ ăn/Đồ uống" android:icon="@drawable/langman" />
-    <item android:id="@+id/nav_movie" android:title="Phim" android:icon="@drawable/langman" />
-    <item android:id="@+id/nav_history" android:title="Lịch sử" android:icon="@drawable/langman" />
-    <item android:id="@+id/nav_manage" android:title="Quản lý" android:icon="@drawable/langman" />
+    <item android:id="@+id/nav_category" android:title="Thể loại" android:icon="@drawable/baseline_category_24" />
+    <item android:id="@+id/nav_food" android:title="Đồ ăn/Đồ uống" android:icon="@drawable/baseline_fastfood_24" />
+    <item android:id="@+id/nav_movie" android:title="Phim" android:icon="@drawable/baseline_movie_24" />
+    <item android:id="@+id/nav_history" android:title="Lịch sử" android:icon="@drawable/baseline_manage_history_24" />
+    <item android:id="@+id/nav_manage" android:title="Quản lý" android:icon="@drawable/baseline_manage_accounts_24" />
 </menu>
