--- a/app/src/main/res/menu/menu_user_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_user_bottom_nav.xml
@@ -1,14 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_home"
-        android:icon="@drawable/langman"
+        android:icon="@drawable/baseline_home_24"
         android:title="Trang chủ" />
     <item
         android:id="@+id/menu_history"
-        android:icon="@drawable/langman"
+        android:icon="@drawable/baseline_history_24"
         android:title="Lịch sử" />
     <item
         android:id="@+id/menu_account"
-        android:icon="@drawable/langman"
+        android:icon="@drawable/baseline_account_box_24"
         android:title="Tài khoản" />
 </menu>
